k8s-configs/doer-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: doer-web
  name: doer-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: doer-web
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: doer-web
    spec:
      containers:
      - image: ctailor2/doer-web:latest
        name: doer-web
status: {}
