k8s-configs/inlets-client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: inlets-client
  name: inlets-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inlets-client
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: inlets-client
    spec:
      containers:
      - image: inlets/inlets:2.7.9-arm64
        name: inlets
        args:
        - client
        - --remote
        - $(EXIT_SERVER_ADDRESS)
        - --token
        - $(AUTHENTICATION_TOKEN)
        - --upstream
        - 192.168.1.1:80
        ports:
        - containerPort: 80
        resources: {}
status: {}
